--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0-rc.12", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.14", features = ["window-close", "window-set-always-on-top", "window-set-decorations", "window-set-focus", "window-set-position", "window-set-size", "window-set-skip-taskbar", "window-show", "window-start-dragging"] }
+tauri = { version = "1.0.0-rc.14", features = ["macos-private-api", "window-close", "window-set-always-on-top", "window-set-decorations", "window-set-focus", "window-set-position", "window-set-size", "window-set-skip-taskbar", "window-show", "window-start-dragging"] }
 
 [features]
 # by default Tauri runs in production mode
